test/spec_vectors/memory64/ok/module_3.wat
(module (memory i64 0 65536))