test/spec_vectors/memory64/fail/module_13.wat
(module (func (f32.store (i64.const 0) (f32.const 0))))